--- a/Calibración/Untitled.ipynb
+++ b/Calibración/Untitled.ipynb
@@ -38,6 +38,71 @@
    "source": [
     "measured_pos = [54000,54200,54320,54400,54480,54620,54720,54800,54860,55000,55060,55200,55300]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#z axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_initial = 11400 #z_soft = 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.382501902173913"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#z_soft= 120000, zmedido= 121800\n",
+    "# regla de 3\n",
+    "#110400 -- 6.405711 pasos\n",
+    "#110000 -- x = 6.382501902173913\n",
+    "110000*6.405711/110400"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_initial = 11240 #z_soft = 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#z_soft= 120000, zmedido= 121800\n",
+    "# regla de 3\n",
+    "#110000 -- x = 6.382501902173913\n",
+    "#110400 -- 6.405711 pasos\n",
+    "#110000 -- x = 6.382501902173913\n",
+    "110000*6.405711/110400"
+   ]
   }
  ],
  "metadata": {
