Joystick code added, not tried yet

--- a/Calibración/Untitled.ipynb
+++ b/Calibración/Untitled.ipynb
@@ -92,16 +92,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.33870719772481"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#z_soft= 120000, zmedido= 122000\n",
+    "# regla de 3\n",
+    "#110760 -- 6.382501902\n",
+    "#110000 -- x = \n",
+    "110000*6.382501902/110760"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110760"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "122000-11240"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#z_soft= 120000, zmedido= 121800\n",
+    "z_initial = 12200 #z_soft = 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110000"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "122200-12200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.3157408672982704"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#z_soft= 120000, zmedido= 122200\n",
     "# regla de 3\n",
-    "#110000 -- x = 6.382501902173913\n",
-    "#110400 -- 6.405711 pasos\n",
-    "#110000 -- x = 6.382501902173913\n",
-    "110000*6.405711/110400"
+    "#110400 -- 6.311167557474014\n",
+    "#110000 -- x = \n",
+    "110000*6.33870719772481/110400"
    ]
   }
  ],
